tests/ui/unsafe_gather_requires_unsafe.stderr
error[E0133]: call to unsafe function `std::arch::x86_64::_mm256_i32gather_ps` is unsafe and requires unsafe block
  --> tests/ui/unsafe_gather_requires_unsafe.rs:17:20
   |
17 |     let gathered = _mm256_i32gather_ps::<4>(data.as_ptr(), indices);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
